fixed issue on Firefox with svgs. added details to svg logo

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body{
     position: relative;
     margin: 3em auto;
     padding: 0;
-    background: url('../img/vetrata.jpg');
+    background: url('../img/vetrata.jpg'),linear-gradient(to bottom, rgba(0, 0, 0, 0.493), rgba(255, 255, 255, .3));
     background-size: cover;
     width: 100vw;
     height: 100vh;
@@ -30,7 +30,9 @@ body{
 .item{
     position:relative;
     display: inline-block;
-    height: 4em;
+ 
+    width: 200px;
+    height: 70px;
  }
  .item svg{
     position:absolute;
@@ -39,87 +41,91 @@ body{
     z-index:-10;
     width:100%;
     height:100%;
-
+    /* // border: 1px orange solid; */
  }
  .item a{
     color: Black;
     text-decoration: none;
     margin: auto;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 1.5rem;
+    font-size: 1.5em;
     display: block;
     height: 100%;
     width: 100%;
  }
- .rect1, .rect2, .rect3, .rect4{
+ .rect1, .rect2, .rect3, .rect4, .rect5, .rect6, .rect7, .rect8{
     position: relative;
  }
  .rect1{
-    z-index:20;
-    width:25%;
-    height:100%;
-    x:0;
-    y:55;
-    fill:rgb(255, 255, 255);
+    
+    fill:rgba(2, 67, 121, 0.5);
+    transform: translateY(90%);
  }
  .rect2{
-    z-index:20;
-    width:25%;
-    height:100%;
-    x:50;
-    y:65;
-    fill:rgba(255, 255, 255, 0.7);
+    
+    fill:rgba(0, 162, 255, 0.5);
+    transform: translateY(80%);
  }
  .rect3{
-    z-index:20;
-    width:25%;
-    height:100%;
-    x:100;
-    y:60;
-    fill:rgb(255, 255, 255);;
+    
+    fill:rgba(2, 67, 121, 0.5);
+    transform: translateY(90%);
  }
  .rect4{
-    z-index:20;
-    width:25%;
-    height:100%;
-    x:150;
-    y:55;
-    fill:rgba(255, 255, 255, 0.7);
+    
+    fill:rgba(0, 162, 255, 0.5);
+    transform: translateY(80%);
+ }
+ .rect5{
+    fill:rgba(2, 67, 121, 0.5);
+    transform: translateY(90%);
+ }
+ .rect6{
+    fill:rgba(0, 162, 255, 0.5);
+    transform: translateY(80%);
+ }
+ .rect7{
+    fill:rgba(2, 67, 121, 0.5);
+    transform: translateY(90%);
+ }
+ .rect8{
+    fill:rgba(0, 162, 255, 0.5);
+    transform: translateY(80%);
  }
  .rect{ 
-    rx:0;
-    ry:0;
-    transition: all .2s ease-in-out;   
+    stroke:rgba(5, 5, 5, 0.5);
+    transition: all .7s ease-in-out; 
  }
  li:hover .rect{
-    y:55%;
-    rx:5;
-    ry:5;
-    
-    animation: menuBar 1s ease-in-out 1s infinite alternate forwards;
+    transform: translateY(5%);  
+    animation: menuBar .5s ease-in-out .6s infinite alternate forwards;
  }
  
  @keyframes menuBar{
     0%{
-       y:55%;
+       
     }
     25%{
-       y:58%;
+       transform: translateY(5%);
     }
     50%{
-       y:50%;
+       transform: translateY(10%);
     }
     75%{
-       y:60%;
+       transform: translateY(15%);
     }
     100%{
-       fill:rgba(255,255,255,.8);
-       y:55%;
+       transform: translateY(10%);
+       stroke:rgba(5, 5, 5, 0.9);       
     }
  }
+ [class^=strip-]{
+     transition: all .1s ease-in-out;
+ }
 
-
+ [class^=strip-]:hover{
+     transform: translateY(15px);
+ }
 /* ======================= */
 .navbar-fdv{
     background:#1F87BD;
